--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>8449832 (faq: account deletion, username changes, 2025-05-25)
+<h1>Changelog</h1><pre>214f180 (roadmap updates, 2025-05-25)
+8449832 (faq: account deletion, username changes, 2025-05-25)
 d9c212b (delete empty account working, 2025-05-25)
 94520f3 (yarn upgrade trix, 2025-05-25)
 e770922 (bundle update, 2025-05-25)
