--- a/app/views/pages/changelog.html.erb
+++ b/app/views/pages/changelog.html.erb
@@ -1,4 +1,5 @@
-<h1>Changelog</h1><pre>652c04f (basic search for Posts working, 2025-05-25)
+<h1>Changelog</h1><pre>7949425 (Post search bug fix, 2025-05-25)
+652c04f (basic search for Posts working, 2025-05-25)
 214f180 (roadmap updates, 2025-05-25)
 8449832 (faq: account deletion, username changes, 2025-05-25)
 d9c212b (delete empty account working, 2025-05-25)
