--- a/app/views/pages/roadmap.html.erb
+++ b/app/views/pages/roadmap.html.erb
@@ -3,7 +3,6 @@
 <ol>
   <li>User: Delete Account that has content</li>
   <li>User Profile Links</li>
-  <li>Search</li>
   <li>Infinite Scrolling</li>
   <li>Block User</li>
   <li>Automatic, scheduled backups</li>
@@ -52,6 +51,7 @@
 
 <h2>Working Features</h2>
 <ol>
+  <li>Search Posts</li>
   <li>User: Delete Account that does not have content</li>
   <li>Dark Mode</li>
   <li>User signs up on site. Site sends password reset email to user's email. User clicks link in email. User creates their password and can then login.</li>
